show map clients even when not animatable

--- a/premedia/edetailers/scss/sections/map.scss
+++ b/premedia/edetailers/scss/sections/map.scss
@@ -31,6 +31,11 @@
 				@include staggeredDelays(20, .2, .5);
 			}
 		}
+		&.rendered {
+			.jvectormap-marker {
+				opacity: 1;
+			}
+		}
 	}
 
 	@include mobile {
