chairman's statement page. scroll snapping on homepage

--- a/premedia/infosys/scss/main.scss
+++ b/premedia/infosys/scss/main.scss
@@ -1,10 +1,29 @@
 @import "navigation";
 
 @import "homepage";
+@import "chairmans-statement";
 
-html, body {
+body {
 	margin: 0;
+	position: relative;
 	overflow-x: hidden;
+	
+	&:after {
+		content: '';
+		z-index: 10;
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0,0,0,0);
+		transition: background-color .3s ease-in-out;
+		pointer-events: none;
+		touch-actions: none;
+	}
+}
+body.nav-open:after {
+	background-color: rgba(0,0,0,.5);
 }
 
 .bg-theme-dark-blue {
@@ -18,4 +37,11 @@ html, body {
 }
 .rupee:before {
 	content: '\20B9';
+}
+.category-label {
+	font-family: Gotham;
+	font-weight: 500;
+	font-size: .75em;
+	letter-spacing: 0.15em;
+	text-transform: uppercase;
 }
