--- a/premedia/infosys/scss/homepage.scss
+++ b/premedia/infosys/scss/homepage.scss
@@ -1,13 +1,12 @@
 .homepage-wrapper {
+	max-height: 100vh;
+    overflow-y: scroll;
+	scroll-snap-type: y mandatory;
+	.scroll-stop {
+		scroll-snap-align: start;
+	}
 	h1, h2, h3, h4, h5 {
 		font-family: Roboto Condensed;
-	}
-	.subtitle {
-		font-family: Gotham;
-		font-weight: 500;
-		font-size: .75em;
-		letter-spacing: 0.15em;
-		text-transform: uppercase;
 	}
 	.key {
 		font-size: .8em;
@@ -57,7 +56,7 @@
 			background-image: url("../img/That's-Live-Enterprise-3.jpg");
 		}
 		#checkmate {
-			background-color: #D0913A;
+			background-color: #D1913A;
 			background-image: url("../img/That's-Live-Enterprise-4.jpg");
 		}
 	}
@@ -67,18 +66,23 @@
 			background-size: cover;
 			background-position: center;
 			background-repeat: no-repeat;
-			cursor: pointer;
 			.arrow {
 				font-size: 2.5em;
-				max-height: 0px;
+				max-height: 0;
 				overflow-y: hidden;
 				transition: max-height .3s ease-in-out;
 			}
 			&:nth-of-type(1) {
 				background-image: url("../img/Chairman's-Message.jpg");
+				@media (max-width: 768px) {
+					background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0,0,0,.8) 100%), url("../img/Chairman's-Message.jpg");
+				}
 			}
 			&:nth-of-type(2) {
 				background-image: url("../img/Letter-to-the-shareholder.jpg");
+				@media (max-width: 768px) {
+					background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0,0,0,.8) 100%), url("../img/Letter-to-the-shareholder.jpg");
+				}
 			}
 			&:hover {
 				&:nth-of-type(1) {
@@ -89,14 +93,6 @@
 				}
 				.arrow {
 					max-height: 3em;
-				}
-			}
-			@media (max-width: 768px) {
-				&:nth-of-type(1) {
-					background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0,0,0,.8) 100%), url("../img/Chairman's-Message.jpg");
-				}
-				&:nth-of-type(2) {
-					background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 25%, rgba(0,0,0,.8) 100%), url("../img/Letter-to-the-shareholder.jpg");
 				}
 			}
 		}
