--- a/premedia/infosys/scss/bootstrap/bootstrap.scss
+++ b/premedia/infosys/scss/bootstrap/bootstrap.scss
@@ -16,7 +16,7 @@
 @import "grid";
 @import "tables";
 @import "forms";
-// @import "buttons";
+@import "buttons";
 @import "transitions";
 // @import "dropdown";
 // @import "button-group";
@@ -33,7 +33,7 @@
 // @import "progress";
 @import "media";
 @import "list-group";
-// @import "close";
+@import "close";
 // @import "toasts";
 @import "modal";
 @import "tooltip";
