--- a/premedia/infosys/scss/main.scss
+++ b/premedia/infosys/scss/main.scss
@@ -1,7 +1,9 @@
 @import "navigation";
+@import "search";
 
 @import "homepage";
 @import "chairmans-statement";
+@import "intuition";
 
 body {
 	margin: 0;
@@ -32,9 +34,17 @@ body.nav-open:after {
 .bg-theme-blue {
 	background-color: #1757A6;
 }
+.bg-theme-green {
+	background-color: #00AB8B;
+}
 .font-theme-blue {
 	color: #1757A6;
 }
+
+h1, h2, h3, h4, h5 {
+	font-family: Roboto Condensed;
+}
+
 .rupee:before {
 	content: '\20B9';
 }
