add intuition to homepage, scroll snapping

--- a/premedia/infosys/scss/homepage.scss
+++ b/premedia/infosys/scss/homepage.scss
@@ -1,7 +1,7 @@
 .homepage-wrapper {
 	max-height: 100vh;
     overflow-y: scroll;
-	// scroll-snap-type: y mandatory;
+	scroll-snap-type: y mandatory;
 	.scroll-stop {
 		scroll-snap-align: start;
 	}
