fix colours, remove spaces

--- a/premedia/infosys/scss/homepage.scss
+++ b/premedia/infosys/scss/homepage.scss
@@ -49,11 +49,11 @@
 			background-image: url("../img/HD/That's-Live-Enterprise-2.jpg");
 		}
 		#talent {
-			background-color: #307DBD;
+			background-color: #017dc3;
 			background-image: url("../img/HD/That's-Live-Enterprise-3.jpg");
 		}
 		#checkmate {
-			background-color: #D1913A;
+			background-color: #da8f1c;
 			background-image: url("../img/HD/That's-Live-Enterprise-4.jpg");
 		}
 	}
