downloads page, footer on all pages, accordion navbar

--- a/premedia/infosys/scss/bootstrap/_variables.scss
+++ b/premedia/infosys/scss/bootstrap/_variables.scss
@@ -156,6 +156,7 @@ $sizes: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $sizes: map-merge(
   (
+    20: 20%,
     25: 25%,
     50: 50%,
     75: 75%,
