--- a/premedia/infosys/scss/main.scss
+++ b/premedia/infosys/scss/main.scss
@@ -4,6 +4,7 @@
 @import "homepage";
 @import "chairmans-statement";
 @import "intuition";
+@import "downloads";
 
 body {
 	margin: 0;
@@ -39,6 +40,9 @@ body.nav-open:after {
 }
 .font-theme-blue {
 	color: #1757A6;
+}
+.font-smaller {
+	font-size: .9em;
 }
 
 h1, h2, h3, h4, h5 {
