--- a/premedia/infosys/scss/navigation.scss
+++ b/premedia/infosys/scss/navigation.scss
@@ -11,7 +11,7 @@
 		outline: none;
 		border: none;
 		font-size: 2em;
-		line-height: 1.2em;
+		line-height: 1.1em;
 	}
 	img {
 		height: 2.5em;
@@ -36,7 +36,6 @@
 	width: 25em;
 	max-width: 100%;
 	left: -25em;
-	color: #0056B3;
 	overflow-x: hidden;
 	transition: left .3s ease-in-out;
 
@@ -44,8 +43,8 @@
 		left: 0;
 	}
 	button {
-		position: absolute;
-		padding: .1em .5em;
+		display: block;
+		padding: .1em .66em;
 		font-size: 3em;
 		line-height: 1em;
 		color: inherit;
@@ -53,7 +52,11 @@
 	.nav-link {
 		position: relative;
 		font-family: Gotham;
+		color: #1757A6;
 		text-transform: uppercase;
+		&:hover {
+			background-color: #f4f4f4;
+		}
 		&.active {
 			background-color: #1757A6;
 			color: #FFF;
@@ -67,7 +70,7 @@
 		font-weight: 400;
 		font-size: 16px;
 		line-height: 19px;
-		padding: 1.25em 1em;
+		padding: 1.25em 2em;
 
 		&[aria-expanded=true] {
 			background-color: #f9f9f9;
@@ -100,6 +103,9 @@
 				font-size: .83em;
 				line-height: 16px;
 				font-weight: 300;
+				&:hover {
+					// background-color: #f4f4f4;
+				}
 				&.active {
 					background-color: rgba(23, 87, 166, .25);
 					color: inherit;
