--- a/premedia/infosys/scss/main.scss
+++ b/premedia/infosys/scss/main.scss
@@ -36,6 +36,11 @@ body.nav-open:after {
 .bg-theme-blue {
 	background-color: #1757A6;
 }
+.bg-theme-blue-on-mobile {
+	@media (max-width: 576px) {
+		background-color: #1757A6;
+	}
+}
 .bg-theme-green {
 	background-color: #00AB8B;
 }
@@ -44,6 +49,11 @@ body.nav-open:after {
 }
 .font-smaller {
 	font-size: .9em;
+}
+.font-smaller-on-mobile {
+	@media (max-width: 576px) {
+		font-size: 2.1em;
+	}
 }
 
 h1, h2, h3, h4, h5 {
