--- a/premedia/infosys/scss/navigation.scss
+++ b/premedia/infosys/scss/navigation.scss
@@ -1,22 +1,25 @@
 .navbar {
-	&:not(.bg-theme-blue){
-		@media (max-width: 768px) {
-			background: linear-gradient(45deg, rgba(0, 0, 0, 0) 60%, rgba(0,0,0,.5) 100%);
+	transition: transform .3s linear;
+	&:not(.scrolling-up) {
+		transform: translateY(-75px);
+		button {
+			transform: translateY(75px);
 		}
-	}
-	&.bg-theme-blue {
-		// background: inherit;
 	}
 	button {
 		outline: none;
 		border: none;
 		font-size: 2em;
 		line-height: 1.1em;
+		transition: transform .3s linear;
 	}
 	img {
 		height: 2.5em;
 		width: auto;
-		padding: 0 1em;
+		padding-left: 1em;
+		@media (min-width: 768px) {
+			padding: 0 1em;
+		}
 	}
 	.search {
 		line-height: 2.5em;
@@ -103,14 +106,19 @@
 				font-size: .83em;
 				line-height: 16px;
 				font-weight: 300;
-				&:hover {
-					// background-color: #f4f4f4;
-				}
 				&.active {
 					background-color: rgba(23, 87, 166, .25);
 					color: inherit;
 				}
 			}
+		}
+	}
+	@media (max-width: 576px) {
+		& > .nav > .nav-link {
+			padding: 1em;
+		}
+		button {
+			padding: .1em 1rem;
 		}
 	}
 }
