--- a/premedia/infosys/scss/homepage.scss
+++ b/premedia/infosys/scss/homepage.scss
@@ -90,9 +90,9 @@
 			background-repeat: no-repeat;
 			.arrow {
 				font-size: 2.5em;
-				max-height: 0;
+				height: 0;
 				overflow-y: hidden;
-				transition: max-height .3s ease-in-out;
+				transition: height .3s ease-in-out;
 			}
 			&:nth-of-type(1) {
 				background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 50%, rgba(0,0,0,.8)), url("../img/HD/Chairman's-Message.jpg");
@@ -101,7 +101,7 @@
 				background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 50%, rgba(0,0,0,.8)), url("../img/HD/Letter-to-the-shareholder.jpg");
 			}
 			&:hover .arrow {
-				max-height: 3em;
+				height: 1em;
 			}
 		}
 	}
