--- a/premedia/infosys/scss/main.scss
+++ b/premedia/infosys/scss/main.scss
@@ -6,11 +6,13 @@
 @import "intuition";
 @import "downloads";
 @import "keytrends";
-
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 body {
 	margin: 0;
 	position: relative;
-	overflow-x: hidden;
 	
 	&:after {
 		content: '';
