--- a/premedia/infosys/scss/search.scss
+++ b/premedia/infosys/scss/search.scss
@@ -1,3 +1,15 @@
+body.search-open {
+	.search:after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: red;
+	}
+}
+
 #search-modal {
 	.modal-body {
 		padding: 0;
