new search overlay, fix keytrends footer+ overflow bugs

--- a/premedia/infosys/scss/keytrends.scss
+++ b/premedia/infosys/scss/keytrends.scss
@@ -53,6 +53,10 @@
 	stroke: #EEC759;
 }
 
+svg {
+	overflow: visible;
+}
+
 #digital-revenue .ct-series {
 	.ct-slice-donut {
 		stroke-dasharray: 125;
