--- a/premedia/infosys/scss/navigation.scss
+++ b/premedia/infosys/scss/navigation.scss
@@ -1,6 +1,6 @@
 .navbar {
 	transition: all .3s linear;
-	padding: 0 1rem 0;
+	padding: 0 1rem ;
 	& > div > a {
 		padding-top: .5rem;
 		padding-bottom: .5rem;
@@ -11,6 +11,7 @@
 		font-size: 2em;
 		line-height: 1.1em;
 		transition: transform .3s linear;
+		padding-bottom: 2px;
 	}
 	img {
 		height: 2.5em;
@@ -29,11 +30,19 @@
 			margin-bottom: .5em;
 		}
 	}
+	@media (max-width: 576px) {
+		padding: 0 .25rem;
+		button {
+			margin: 0 .25em;
+		}
+		.navbar-header a:last-of-type img {
+			padding: 0;
+			padding-left: .5rem
+		}
+	}
 }
 body:not(.nav-open) {
 	.navbar.hide-on-scroll:not(.scrolling-up) {
-		// transform: translateY(-75px);
-		// background-color: rgba(23, 87, 166, 0);
 		top: -75px;
 		button {
 			transform: translateY(75px);
