--- a/premedia/infosys/scss/search.scss
+++ b/premedia/infosys/scss/search.scss
@@ -1,12 +1,83 @@
 body.search-open {
+	.navbar {
+		background-color: #1757A6;
+	}
 	.search:after {
-		content: '';
+		content: '\2715';
 		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-color: red;
+		color: #1757A6;
+		background-color: #fff;
+		font-weight: 700;
+		font-size: 2.5em;
+		padding: .5rem .75rem;
+		line-height: 1;
+	}
+	.search:hover:before {
+		content: ''
+	}
+	#search-overlay {
+		opacity: 1;
+		touch-actions: auto;
+		pointer-events: auto;
+	}
+}
+#search-overlay {
+	opacity: 0;
+	touch-actions: none;
+	pointer-events: none; 
+	position: fixed;
+	overflow-y: auto;
+	transition: all .3s ease-in-out;
+	background-color: #fff;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	padding-top: 4em;
+	z-index: 10;
+	.search-bar {
+		margin: 3em auto 2em;
+		font-size: 2em;
+		@media (max-width:576px) {
+			margin: .5rem auto;
+		}
+		input[type="search"] {
+			display: block;
+			width: 100%;
+			position: relative;
+			border: none;
+			border-bottom: 3px solid #1757A6;
+			&:focus {
+				outline: none;
+			}
+			&::placeholder {
+				color: rgba(23, 87, 166, .7);
+			}
+		}
+	}
+	.search-results {
+		#tipue_search_results_count, #tipue_search_error {
+			text-align: right;
+		}
+		#tipue_search_image_modal {
+			display: none;
+		}
+		.tipue_search_result {
+			padding: 1em 1em .5em;
+			@media (max-width:992px) {
+				padding: 1em 0 .5em;
+			}
+		}
+		.tipue_search_content_title a {
+			color: blue;
+		}
+		.tipue_search_content_bold {
+			font-weight: bold;
+		}
 	}
 }
 
@@ -34,23 +105,5 @@ body.search-open {
 		input {
 			width: 100%;
 		}
-	}
-	#tipue_search_results_count {
-		text-align: right;
-	}
-	#tipue_search_image_modal {
-		display: none;
-	}
-	.tipue_search_result {
-		padding: 1em 1em .5em;
-		@media (max-width:992px) {
-			padding: 1em 0 .5em;
-		}
-	}
-	.tipue_search_content_title a {
-		color: blue;
-	}
-	.tipue_search_content_bold {
-		font-weight: bold;
 	}
 }
