fixed search, active page highlighting and final compression / optimisations for upload - INFOSYS AR SAMPLE V1

--- a/premedia/infosys/scss/bootstrap/bootstrap.scss
+++ b/premedia/infosys/scss/bootstrap/bootstrap.scss
@@ -15,8 +15,8 @@
 // @import "code";
 @import "grid";
 @import "tables";
-@import "forms";
-@import "buttons";
+// @import "forms";
+// @import "buttons";
 @import "transitions";
 // @import "dropdown";
 // @import "button-group";
@@ -35,8 +35,8 @@
 @import "list-group";
 @import "close";
 // @import "toasts";
-@import "modal";
-@import "tooltip";
+// @import "modal";
+// @import "tooltip";
 // @import "popover";
 // @import "carousel";
 // @import "spinners";
