--- a/premedia/infosys/scss/homepage.scss
+++ b/premedia/infosys/scss/homepage.scss
@@ -105,15 +105,20 @@
 			}
 		}
 	}
-	#trends #figures {
-		& > div:nth-of-type(1) {
-			background-color: #00AB8B;
+	#trends {
+		img {
+			max-height: 25em;
 		}
-		& > div:nth-of-type(2) {
-			background-color: #6D7275;
-		}
-		& > div:nth-of-type(4) {
-			background-color: #DA8F1C;
+		#figures {
+			& > div:nth-of-type(1) {
+				background-color: #00AB8B;
+			}
+			& > div:nth-of-type(2) {
+				background-color: #6D7275;
+			}
+			& > div:nth-of-type(4) {
+				background-color: #DA8F1C;
+			}
 		}
 	}
 }
