final content changes;

--- a/premedia/Tatamotors/css/custom.css
+++ b/premedia/Tatamotors/css/custom.css
@@ -209,7 +209,7 @@ input, select { font-size: 100%; }
     .navbar-nav .nav-link {padding-left: 1rem !important; padding-right: 1rem !important;}
 }
 
-
+.text-grey {color:#aaa;}
 
 .nl-img {height: 100px;}
 
