--- a/premedia/site/scss/_utilities.scss
+++ b/premedia/site/scss/_utilities.scss
@@ -113,6 +113,7 @@ $utilities: map-merge(
       class: w,
       values: (
         25: 25%,
+        33: 33.33%,
         50: 50%,
         75: 75%,
         100: 100%,
