--- a/premedia/site/scss/custom.scss
+++ b/premedia/site/scss/custom.scss
@@ -1,3 +1,13 @@
+.bg-edetailers {
+	background-color: #c84b5d
+}
+.bg-web {
+	background-color: #1b4f99
+}
+.bg-email {
+	background-color: #85b1e8;
+}
+
 .flex-center {
 	justify-content: center;
 	align-items: center;
@@ -14,6 +24,13 @@
 
 .bg-darker {
 	background-color: $gray-900;
+}
+body {
+	font-family: 'Nanum Myeongjo', serif;
+}
+h1,h2,h3,h4,h5,.display-1,.display-2,.display-3,.display-4,.display-5,.display-6 {
+	font-weight: 900;
+	font-family: 'Playfair Display', serif;
 }
 
 #menu {
@@ -43,24 +60,45 @@ a {
 	z-index: 12;
 	cursor: pointer;
 }
+.lead {
+	line-height: 1.75;
+}
 .section {
-	padding: 45px 0;
 	min-height: 100vh;
+	position: relative;
+	display: flex;
 	&.half {
 		min-height: 50vh;
 	}
-}
-#services {
-	height: 100vh;
-	overflow-y: scroll;
-}
-.snap-container {
-	scroll-snap-type: y proximity;
-	overflow-y: scroll;
-	&.mandatory {
-		scroll-snap-type: y mandatory;
+	.half {
+		min-height: 50vh;
+		z-index: 8;
+		position: relative;
+		display: flex;
+		align-items: stretch;
 	}
-	.snap-point {
-		scroll-snap-align: start;
+	.psuedo-section {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		.half {
+			z-index: -1;
+		}
+	}
+	.section-title {
+		color: white;
+	}
+	@include media-breakpoint-down(md) {
+		.section-title {
+			text-align: center;
+			color: black;
+		}
+	}
+}
+.map {
+	span {
+		color: red;
 	}
 }
